# jeff-launcher

./: .clang_complete  CMakeLists.txt  README.md  display-names.txt  index.html  indexed-execs.txt  jeff-backend  jeff-backend_debug  main.js  musicplayer.html  package.json  searchbar.html  test.txt  youtubeplayer.html
backend/: meson.build
backend/src/: .#main.cpp  CMakeLists.txt  main.cpp
backend/src/Indexing/: CMakeLists.txt  Makefile  audio-library.cpp  cmake_install.cmake  indexing.cpp  indexing.h
backend/src/Utilities/: CMakeLists.txt  Makefile  btree.h  cmake_install.cmake  dir-indexer.h  notify.cpp  threadpool.h  util.cpp  util.h
css/: searchbar.css
helper-files/: Info.plist  dir-tree.txt
